@@ -1,7 +1,8 @@
 // $Id$
 
 project (DAnCE_LocalityManager_Impl) : dance_lib, dance_output, naming, \
-        dance_skel, dance_logger, dance_deployment_scheduler, dance_deployment_scheduler {
+        dance_skel, dance_logger, dance_deployment_scheduler, dance_deployment_scheduler, \
+        install {
 
    dynamicflags += LOCALITY_MANAGER_IMPL_BUILD_DLL
 
@@ -17,6 +18,10 @@ project (DAnCE_LocalityManager_Impl) : dance_lib, dance_output, naming, \
    specific {
      install_dir = DAnCE/LocalityManager/Daemon
    }
+  verbatim(gnuace, postinstall) {
+"	$(MKDIR) $(INSTALL_PREFIX)/share/DAnCE/LocalityManager/Daemon"
+"	cp  Locality_Manager_Impl.h $(INSTALL_PREFIX)/share/DAnCE/LocalityManager/Daemon/"
+  }
 }
 
 project (DAnCE_LocalityManager_Exec) : dance_exe, dance_exe, dance_output, \
@@ -36,6 +41,7 @@ project (DAnCE_LocalityManager_Exec) : dance_exe, dance_exe, dance_output, \
   verbatim(gnuace, postinstall) {
 "	$(MKDIR) $(INSTALL_PREFIX)/share/DAnCE/LocalityManager/Daemon"
 "	cp  Locality_Manager_Task.cpp $(INSTALL_PREFIX)/share/DAnCE/LocalityManager/Daemon/"
+"	cp  Locality_Manager_Task.h $(INSTALL_PREFIX)/share/DAnCE/LocalityManager/Daemon/"
 "	cp  Locality_Manager.cpp $(INSTALL_PREFIX)/share/DAnCE/LocalityManager/Daemon/"
   }
 }
